fixing distorted image for background

--- a/css/main.css
+++ b/css/main.css
@@ -284,7 +284,7 @@ a:hover, a:focus {
    Main styles
    ========================================================================== */
 header {
-  background: url(../img/restaurant-shadow.jpeg) #231f20 no-repeat center center fixed;
+  background: url(../img/restaurant-shadow.jpeg) #231f20 no-repeat center center;
   /*background: url(../img/header-bg.jpg) no-repeat center center;*/
   width: 100%;
   padding: 20px 10px 60px 10px;
